--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="logo"><a href="/"><h1>JC PRATT</h1></a></div>
+    <div class="logo"><a href="/"><h1>JC&nbsp;PRATT</h1></a></div>
     <nav class="nav_bar">
         <a href="/home"><span class="nav_item">WORK</span></a>
         <a href=""><span class="nav_item">BIO</span></a>
