--- a/_includes/assets/css/styles.css
+++ b/_includes/assets/css/styles.css
@@ -28,6 +28,8 @@ p,b,small,big,h1,strong,span {
 }
 a { 
     text-decoration: none; 
+    font: 300 1rem/1.5 'Quicksand', sans-serif;
+    color: #eeeeee;
 }
 h1{
     font: 400 1.25rem/1.25 'Quicksand', sans-serif;
@@ -37,13 +39,22 @@ p{
     font: 300 1rem/1.5 'Quicksand', sans-serif;
     color: #eeeeee;
 }
-b{
+span{
     font: 300 1rem/1.5 'Quicksand', sans-serif;
+    color: #eeeeee;
+}
+b{
+    font: 400 1rem/1.5 'Quicksand', sans-serif;
     color: #eeeeee;
 }
 small{
     font: 300 0.75rem/01.5 'Quicksand', sans-serif;
     color: #bbbbbb;
+}
+blockquote{
+    margin: 10px;
+    border-left: 3px solid rgba(255,255,255,0.1);
+    padding-left: 10px;
 }
 
 /*----------------------components----------------------*/
@@ -134,6 +145,74 @@ small{
     transition: all 1s ease-in-out;
 }
 
+/*----------------------gallery page----------------------*/
+.modal_window{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    padding: 20px 20px 20px 20px;
+    background-color: rgba(0,0,0,0.8);
+}
+.modal_image{
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    cursor: zoom-out;
+}
+.control_bar{
+    background-color: rgba(0,0,0,0.0);
+    margin-top: 20px;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.pagination{
+    flex:0.12;
+    font: 400 35px/1.5 'Quicksand', sans-serif;
+    font-size: 30px;
+    padding: 5px;
+    text-align: right;
+}
+#purchase_link{
+    font: 400 35px/1 'Quicksand', sans-serif;
+    color: #eeeeee;
+}
+#purchase_link::after{
+    content: url('/includes/assets/images/external_link.png');
+}
+.button{
+    flex: 0.23;
+    height: 100%;
+    transition: ease-in-out 0.5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
+.button:hover{
+    background-color: rgba(255,255,255,0.2);
+    transition: ease-in-out 0.5s;
+}
+.button span{
+    font: 300 35px/1 'Quicksand', sans-serif;
+}
+
 /*----------------------home page----------------------*/
 .home_page{
     width: 100%;
@@ -176,27 +255,57 @@ small{
     justify-content: center;
     background-color: #333333;
 }
+.gallery_intro_box{
+    padding: 20px 25px 20px 25px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 .gallery_intro{
     max-width: 800px;
     width: 100%;
     padding: 10px;
-    margin: 20px;
     background-color: rgba(255,255,255,0.1);
 }
 .gallery_intro p{
     text-align: left;
 }
 .gallery{
-    padding: 0 5% 0 5%;
+    padding: 0 20px 0 20px;
     width: 100%;
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
 }
-.gallery img{
-    max-height: 175px;
+.preview{
+    /* transition: ease-in 0.5s;
+    outline: 0px solid rgba(255,255,255,0); */
     flex: 1 0 auto;
-    object-fit: cover;
+    margin: 05px;
+    cursor: zoom-in;
+    outline: 0 solid rgba(255, 255, 255, 0.5);
+    transition: 0s;
+}
+/* use javascript for thatlast line */
+.preview:last-child{
+    flex: 1 0 auto;
     margin: 05px;
 }
+.preview:hover{
+    /* transition: ease-out 0.05s;
+    outline: 5px solid rgba(255,255,255,0.2); */
+    /* animation: zoom ease-out 1s;
+    animation-fill-mode: forwards; */
+    outline: 10px solid rgba(0,0,0,0.0);
+    transition: ease-out 0.5s;
+    /* animation: zoom 0.3s ; */
+}
+.zoom{
+    animation: zoom 0.3s;
+}
+@keyframes zoom {
+    0% {scale: 1.0;}
+    50% {scale: 0.9;}
+    100% {scale: 1.0;}
+  }
