--- a/_includes/home.njk
+++ b/_includes/home.njk
@@ -1,3 +1,7 @@
+---
+
+
+---
 <!doctype html>
 <html style="scroll-behavior: smooth;">
     <head>
@@ -5,10 +9,16 @@
         <link rel="stylesheet" href="/includes/assets/css/styles.css">
         {% include "components/metadata.njk" %}
     </head>
-    <body class="home_page">
+    <body class="home_page"> 
         {% include "components/header.njk" %}
 
         {{ content | safe }}
+
+        <nav class="chapter_box">       
+        {%- for chapter in collections.galleries %}
+            <a href="{{ chapter.url }}" class="chapter">{{ chapter.data.title }}</a>
+        {%- endfor %}
+        </nav>
 
         {% include "components/footer.njk" %}
     </body>
