--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,3 +1,4 @@
 <footer class="footer">
     <p>©2020 JC Pratt · <a href="mailto:jcpratt@orange.fr " style="color:white">jcpratt@orange.fr</a><p>
 </footer>
+<a  href="#header" class="back_to_top"><span></span></a>
