--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -1,8 +1,9 @@
-<header class="header">
-    <div class="logo"><a href="/"><h1>JC&nbsp;PRATT</h1></a></div>
+<header id="header" class="header">
+    <a class="logo" href="/">JC&nbsp;Pratt</a>
     <nav class="nav_bar">
-        <a href="/home"><span class="nav_item">WORK</span></a>
-        <a href=""><span class="nav_item">BIO</span></a>
+        <a href="/home"><span class="nav_item">GALERIES</span></a>
+        <a href=""><span class="nav_item">ARTISTE</span></a>
         <a href=""><span class="nav_item">VIDEO</span></a>
     </nav>
 </header>
+<div class="header_sub_bar"></div>
