--- a/_includes/components/modal.njk
+++ b/_includes/components/modal.njk
@@ -1,7 +1,7 @@
 <div id="modal_window" class="modal_window">
     <img id="modal_image" class="modal_image" src="">
     <div class="control_bar">
-        <div class="button"><a target="_blank" rel="noopener noreferrer" href="" id="purchase_link"> BUY </a></div>
+        <div class="button"><a target="_blank" rel="noopener noreferrer" href="" id="purchase_link">Acheter sur PCAgalleryArt</a></div>
         <div id="previous" class="previous button "><span> &#171; </span></div>
         <span id="pagination" class="pagination"> 44/11 </span>
         <div id="next" class="next button "><span>  &#187; </span></div>
