--- a/_includes/assets/css/styles.css
+++ b/_includes/assets/css/styles.css
@@ -9,6 +9,8 @@ body{
 
 html {
   box-sizing: border-box;
+  
+  font-size: 14px;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -29,22 +31,24 @@ p,b,small,big,h1,strong,span {
 a { 
     text-decoration: none; 
     font: 300 1rem/1.5 'Quicksand', sans-serif;
-    color: #eeeeee;
+    color: #7073ff;
 }
 h1{
-    font: 400 1.25rem/1.25 'Quicksand', sans-serif;
+    font: 500 1.25rem/1.25 'Quicksand', sans-serif;
     color: #ffffff;
+    padding-bottom: 0rem;
 }
 p{
     font: 300 1rem/1.5 'Quicksand', sans-serif;
     color: #eeeeee;
+    padding-bottom: 1.5rem;
 }
 span{
     font: 300 1rem/1.5 'Quicksand', sans-serif;
     color: #eeeeee;
 }
-b{
-    font: 400 1rem/1.5 'Quicksand', sans-serif;
+strong , b{
+    font: 500 1rem/1.5 'Quicksand', sans-serif;
     color: #eeeeee;
 }
 small{
@@ -61,36 +65,41 @@ blockquote{
 /*header*/
 .header{
     width: 100%;
+    max-width: 1000px;
     height: 50px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    border-bottom: 1px solid #666666;
     justify-content: space-between;
-    padding-top: 15px;
+    padding: 15px 60px 0 60px;
+}
+.header_sub_bar {
+    padding: 0;
+    margin: 0;
+    height: 0;
+    width: 100%;
+    border-bottom: 1px solid #666666;
 }
 .logo{
-    flex: 25%;
     height: 100%;
     font: 300 1.25rem/1.25 'Quicksand', sans-serif;
     color: #eeeeee;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 0 10px 0 10px;
+    padding: 0 2px 0 2px;
 }
 .nav_bar{
-    flex: 75%;
-    max-width: 800px;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     align-items: center;
 }
 .nav_item{
     font: 300 1.25rem/1.25 'Quicksand', sans-serif;
     padding: 0 2px 0 2px;
+    margin-left: 10px;
     border-bottom: 1px solid #333333;
     color: #666666;
     transition: all 0.2s ease-in-out;
@@ -123,6 +132,28 @@ blockquote{
 }
 
 /*----------------------landing page----------------------*/
+.back_to_top{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    height: 45px;
+    width: 45px;
+
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+.back_to_top span{
+    display: block;
+    height: 25px;
+    width: 25px;
+    transform: translateY(50%) rotate(225deg);
+    border-bottom: 5px solid #333333 ;
+    border-right: 5px solid #333333 ;
+}
+
+/*----------------------landing page----------------------*/
 .landing_page{
     width: 100%;
     min-height: 100vh;
@@ -145,7 +176,7 @@ blockquote{
     transition: all 1s ease-in-out;
 }
 
-/*----------------------gallery page----------------------*/
+/*----------------------modal page----------------------*/
 .modal_window{
     position: fixed;
     top: 0;
@@ -170,7 +201,7 @@ blockquote{
     background-color: rgba(0,0,0,0.0);
     margin-top: 20px;
     width: 100%;
-    height: 40px;
+    height: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -182,13 +213,14 @@ blockquote{
     font: 400 35px/1.5 'Quicksand', sans-serif;
     font-size: 30px;
     padding: 5px;
-    text-align: right;
+    text-align: center;
 }
 #purchase_link{
-    font: 400 35px/1 'Quicksand', sans-serif;
+    font: 400 20px/1 'Quicksand', sans-serif;
     color: #eeeeee;
 }
 #purchase_link::after{
+    padding-right: 1rem;
     content: url('/includes/assets/images/external_link.png');
 }
 .button{
@@ -256,23 +288,61 @@ blockquote{
     background-color: #333333;
 }
 .gallery_intro_box{
-    padding: 20px 25px 20px 25px;
+    padding: 20px 60px 20px 60px;
     width: 100%;
+    min-height: 99vh;
+    max-width: 1000px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    
+}
+/* .gallery_intro{
+    width: 100%;
+    padding: 0;
+    background-color: rgba(255,255,255,0.00);
+} */
+.gallery_button{
+    align-self: center;
+    height: 30px;
+    width: 30px;
+    transform: rotate(45deg);
+    border-bottom: 5px solid #eeeeee ;
+    border-right: 5px solid #eeeeee ;
+    margin-top: 20px;
+    margin-bottom: auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: 0.5s ease-out;
+}
+.gallery_button:hover {
+    transform: translateY(5px) rotate(45deg);
+
+    transition: 0.5s ease-out;
+}
+.gallery_button div{
     display: flex;
     justify-content: center;
+    transform: rotate(-45deg) translateY(-0px);
+    width: 0;
+    height: 0;
+
+    position: relative;
 }
-.gallery_intro{
-    max-width: 800px;
-    width: 100%;
-    padding: 10px;
-    background-color: rgba(255,255,255,0.1);
-}
-.gallery_intro p{
-    text-align: left;
+.gallery_button div span{
+    text-align: center;
+    position: relative;
+    bottom: 0;
+    transform: translateY(-1.5rem);
+
 }
 .gallery{
-    padding: 0 20px 0 20px;
+    padding: 20px 55px 60px 55px; /*60-5 px*/
     width: 100%;
+    max-width: 1010px;
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -286,12 +356,13 @@ blockquote{
     cursor: zoom-in;
     outline: 0 solid rgba(255, 255, 255, 0.5);
     transition: 0s;
+    object-fit: cover;
 }
-/* use javascript for thatlast line */
+/* use javascript for thatlast line 
 .preview:last-child{
-    flex: 1 0 auto;
+    flex: 0 1 auto; 
     margin: 05px;
-}
+}*/
 .preview:hover{
     /* transition: ease-out 0.05s;
     outline: 5px solid rgba(255,255,255,0.2); */
