--- a/_includes/gallery.njk
+++ b/_includes/gallery.njk
@@ -10,6 +10,7 @@ tags: galleries
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="/includes/assets/css/styles.css">
         <script src="/includes/assets/js/modal_gallery.js" defer> </script>
+        <script src="/includes/assets/js/masonry_resize.js" defer> </script>
         {% include "components/metadata.njk" %}
     </head>
     <body class="gallery_page">
@@ -17,12 +18,13 @@ tags: galleries
         {% include "components/header.njk" %}
 
         <div class="gallery_intro_box">
-            <div class="gallery_intro">
-                {{ content | safe }}
-            </div>
+            {# <div class="gallery_intro"> #}
+            {{ content | safe | nl2br }}
+            {# </div> #}
+            <a class="gallery_button" href="#gallery"><div><span>Voir&nbsp;la&nbsp;Galerie</span></div></a>
         </div>
 
-        <div class="gallery">
+        <div id="gallery" class="gallery">
             {%- set totalNumberOfImages = ( products | length ) + ( collections[page.fileSlug] | length ) %}
             {%- set offset = products | length %}
         {%- for product in products %}
