added loader center the gallery button

--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -2,7 +2,7 @@
     <a class="logo" href="{{website.url}}/">JC&nbsp;Pratt</a>
     <nav class="nav_bar">
         <a href="{{website.url}}/home"><span class="nav_item">GALERIES</span></a>
-        <a href=""><span class="nav_item">ARTISTE</span></a>
+        <a href="{{website.url}}/bio"><span class="nav_item">ARTISTE&nbsp;PHOTOGRAPHE</span></a>
         <a href=""><span class="nav_item">VIDEO</span></a>
     </nav>
 </header>
