--- a/_includes/assets/css/styles.css
+++ b/_includes/assets/css/styles.css
@@ -197,6 +197,7 @@ blockquote{
     cursor: zoom-out;
 }
 .control_bar{
+    z-index: 4;
     background-color: rgba(0,0,0,0.0);
     margin-top: 20px;
     width: 100%;
@@ -243,6 +244,33 @@ blockquote{
 .button span{
     font: 300 35px/1 'Quicksand', sans-serif;
 }
+.spinner{
+    z-index: 3;
+    opacity: 0;
+    z-index: 1;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+    transform: translateX(-50%) translateY(-50%);
+}
+.spinning{
+    animation: 0.6s linear 2 spin , 1.2s linear 1 fade;
+}
+@keyframes spin {
+    0% {transform:rotate(360deg);}
+    25% {transform:rotate(270deg);}
+    50% {transform:rotate(180deg);}
+    75% {transform:rotate(90deg);}
+    100% {transform:rotate(0deg);}
+}
+@keyframes fade {
+    0% {opacity: 1;}
+    75% {opacity: 1;}
+    100% {opacity: 0;}
+}
 
 /*----------------------home page----------------------*/
 .home_page{
@@ -287,9 +315,9 @@ blockquote{
     background-color: #333333;
 }
 .gallery_intro_box{
-    padding: 20px 60px 20px 60px;
+    padding: 60px;
     width: 100%;
-    min-height: 99vh;
+    min-height: 100vh;
     max-width: 1000px;
     display: flex;
     justify-content: flex-start;
@@ -306,7 +334,8 @@ padding-bottom: 1.5rem;
 } */
 .gallery_button{
     align-self: center;
-    padding: 40px 30px 60px 30px;
+    margin: auto;
+    padding: 40px 30px 50px 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -387,3 +416,18 @@ padding-bottom: 1.5rem;
     50% {scale: 0.9;}
     100% {scale: 1.0;}
   }
+
+  /**/
+.text_box{
+    padding: 60px;
+    width: 100%;
+    min-height: 100vh;
+    max-width: 1000px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    
+}
+.text_box p {
+padding-bottom: 1.5rem;
+}
