--- a/_includes/components/modal.njk
+++ b/_includes/components/modal.njk
@@ -1,4 +1,5 @@
 <div id="modal_window" class="modal_window">
+    <img src="/includes/assets/images/load.png" id="spinner" class="spinner">
     <img id="modal_image" class="modal_image" src="">
     <div class="control_bar">
         <div class="button"><a target="_blank" rel="noopener noreferrer" href="" id="purchase_link">Acheter sur PCAgalleryArt</a></div>
