--- a/_includes/gallery.njk
+++ b/_includes/gallery.njk
@@ -1,7 +1,7 @@
 ---
 title: "gallery"
 description: ""
-permalink: "{{page.fileSlug}}/"
+permalink: "gallery/{{page.fileSlug}}/"
 tags: chapters
 ---
 <!doctype html>
