--- a/_includes/components/modal.njk
+++ b/_includes/components/modal.njk
@@ -1,12 +1,18 @@
 <div id="modal_window" class="modal_window">
-    <img src="/includes/assets/images/load.png" id="spinner" class="spinner">
-    <img id="modal_image" class="modal_image" src="">
+    <img src="{{website.url}}/includes/assets/images/load.png" id="spinner" class="spinner">
+    <div class="modal_image_container">
+        <img id="modal_image" class="modal_image"  src="">
+    </div>
     <div class="control_bar">
-        <div class="button"><a target="_blank" rel="noopener noreferrer" href="" id="purchase_link">Acheter sur PCAgalleryArt</a></div>
+        <div class="button">
+            <a target="_blank" rel="noopener noreferrer" href="" id="purchase_link">
+                <img src="{{website.url}}/includes/assets/images/external_link.png">
+                <p><!--<span>BUY</span><br>-->Tirage d'art certifié/signé Edition limitée 1/3</p>
+            </a>
+        </div>
         <div id="previous" class="previous button "><span> &#171; </span></div>
         <span id="pagination" class="pagination"> 44/11 </span>
         <div id="next" class="next button "><span>  &#187; </span></div>
         <div id="close" class="close button "><span> X </span></div>
     </div>
-    <img id="-1" src="" style="display:none">
 </div>
