--- a/docs/includes/assets/css/styles.css
+++ b/docs/includes/assets/css/styles.css
@@ -197,7 +197,7 @@ blockquote{
     /* padding: 20px 20px 20px 20px; doesn't work on google chrome*/
     background-color: rgba(0,0,0,0.8);
 }
-.modal_image_container{/* FUCK YOU GOOGE CHROME */
+.modal_image_container{/* FUCK YOU GOOGLE CHROME */
     padding: 20px;
     flex: 1 1 auto;
 
@@ -213,7 +213,7 @@ blockquote{
 }
 .modal_image{
     margin: auto;
-    object-fit: scale-down;
+    object-fit: scale-down; /* because of the old  */
 
     max-width: 100%;
     max-height: 100%;
@@ -294,7 +294,7 @@ blockquote{
     transform: translateX(-50%) translateY(-50%);
 }
 .spinning{
-    animation: 0.6s linear 2 spin , 0.8s linear 1 fade;
+    animation: 0.6s linear 2 spin , 0.9s linear 1 fade;
 }
 @keyframes spin {
     0% {transform:rotate(360deg);}
