--- a/_includes/gallery.njk
+++ b/_includes/gallery.njk
@@ -21,7 +21,7 @@ tags: chapters
             {# <div class="gallery_intro"> #}
             {{ content | safe | nl2br }}
             {# </div> #}
-            <a class="gallery_button" href="#gallery"><p>Voir&nbsp;la&nbsp;Galerie</p><div class="arrow_container"><div class="arrow"></div></div></a>
+            <a class="gallery_button" href="#gallery"><p>Gallery</p><div class="arrow_container"><div class="arrow"></div></div></a>
         </div>
 
         <div id="gallery" class="gallery" data-scaling-ratio="{{image_scaling}}">
