--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,5 +1,5 @@
 <footer class="footer">
     <p>©2020 JC Pratt · <a href="mailto:jcpratt@orange.fr " style="color:white">jcpratt@orange.fr</a></p>
-    <p><a href="/copyright " style="color:white">Propriété Intellectuelle, Droit d'Auteur</a></p>
+    <p><a href="{{website.url}}/copyright " style="color:white">Propriété Intellectuelle, Droit d'Auteur</a></p>
 </footer>
 <a  href="#header" class="back_to_top"><span></span></a>
