--- a/docs/includes/assets/css/styles.css
+++ b/docs/includes/assets/css/styles.css
@@ -495,6 +495,12 @@ body{
 	justify-content: flex-start;
 	align-items: stretch;
 }
+@media screen and (max-width: 600px) {
+	.gallery{
+		padding: 20px 15px 60px 15px;
+	}
+}
+
 .preview{
 	flex: 1 1 auto;
 	/* height: auto; */
