--- a/_includes/components/metadata.njk
+++ b/_includes/components/metadata.njk
@@ -1,35 +1,35 @@
-
+<!-- ^^^^ OVERIDE BY adding DUPLICATE TAG ABOVE ^^^^ -->
 <!-- SEO tag -->
 {%- if title %}
-    <title>JC PRATT | {{ title }}</title>
+	<title>JC PRATT | {{ title }}</title>
 {%- endif %}
 {%- if description %}
-    <meta name="description" content="{{ description}}" />
+	<meta name="description" content="{{ description }}" />
 {%- endif %}
-    <!--<link rel="canonical" href="https://www./" />     CHANGE THIS !!!  -->
-    <meta http-equiv="Content-Type" content="text/html;  charset=utf-8"> 
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content= "index, follow">
+	<link rel="canonical" href="{{ website.completeUrl }}" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content= "index, follow">
 <!-- SEO tag -->
 
 <!-- Essential META Tags -->
-    <meta property="og:title" content="JC PRATT" />
-    <meta property="og:locale" content="{{ lang }}" />
+	<meta property="og:title" content="JC PRATT" />
+	<meta property="og:locale" content="{{ lang }}" />
 {%- if description %}
-    <meta property="og:description" content="{{ description }}" />
+	<meta property="og:description" content="{{ description }}" />
 {%- endif %}
 {%- if image %}
-    <!--<meta property="og:image" content="https://www.{{ image }}">     CHANGE THIS !!!  -->
+	<meta property="og:image" content="{{ website.completeUrl }}{{ image }}">
 {%- endif %}
-<!--<meta property="og:url" content="https://www./" />     CHANGE THIS !!!  -->
-    <meta name="twitter:card" content="summary_large_image">
+<meta property="og:url" content="{{ website.completeUrl }}" />
+	<meta name="twitter:card" content="summary_large_image">
 
 
 <!-- Recommended -->
 
-    <meta property="og:site_name" content="JC PRATT" />
-    <meta name="twitter:image:alt" content="Photographe professionnel auteur, membre de l'UPP disponible pour projets photographiques">
+	<meta property="og:site_name" content="JC PRATT" />
+	<meta name="twitter:image:alt" content="Photographe professionnel auteur.">
 
 
 <!-- Required for Analytics 
