--- a/_includes/gallery.njk
+++ b/_includes/gallery.njk
@@ -12,6 +12,16 @@ buy_text: "Tirage d'Art / 1/3 / pcagalleryart"
 		<link rel="stylesheet" href="{{website.url}}/includes/assets/css/styles.css">
 		<script src="{{website.url}}/includes/assets/js/modal_gallery.js" defer> </script>
 		<script src="{{website.url}}/includes/assets/js/masonry_resize.js" defer> </script>
+		
+		<!--overides-->
+		{%- if cover %}
+		<meta property="og:image" content="{{website.completeUrl}}/gallery/{{page.fileSlug}}/larges/{{ cover }}">
+		{%- elif products[0] %}
+		<meta property="og:image" content="{{website.completeUrl}}/gallery/{{page.fileSlug}}/larges/{{product[0]}}">
+		{%- else %}
+		<meta property="og:image" content="{{website.completeUrl}}/{{ collections[page.fileSlug][0] | replace('/thumbnails','/larges') }}">
+		{%- endif %}
+		
 		{% include "components/metadata.njk" %}
 	</head>
 	<body class="gallery_page">
