--- a/docs/includes/assets/css/styles.css
+++ b/docs/includes/assets/css/styles.css
@@ -536,7 +536,7 @@ body{
 	100% {scale: 1.0;}
   }
 
-  /**/
+  /*----------------------page with text----------------------*/
 .text_box{
 	padding: 60px;
 	width: 100%;
@@ -551,7 +551,7 @@ body{
 padding-bottom: 0.5rem;
 }
 
-/*banner*/
+/*----------------------banner----------------------*/
 .banner_container{
 	width: 100%; 
 	max-width:1000px; 
@@ -567,4 +567,20 @@ padding-bottom: 0.5rem;
 	.banner_container{
 		padding: 30px 0 0 0;
 	}
+}
+
+/*----------------------videos page----------------------*/
+.video_box{
+	width: 100%;
+	/* min-height: 100vh; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: #333333;
+}
+video{
+	margin:20px;
+	width:90%;
+	max-width:600px;
 }
