--- a/docs/includes/assets/css/styles.css
+++ b/docs/includes/assets/css/styles.css
@@ -313,10 +313,11 @@ body{
 	width: 100%;
 	height: 100%;
 	object-fit: scale-down;
-	transform: translateX(-50%) translateY(-50%);
+	transform-origin: center;
+	/* transform: translateX(-50%) translateY(-50%); */
 }
 .spinning{
-	animation: 0.6s linear 2 spin , 0.9s linear 1 fade;
+	animation: 0.6s linear infinite spin; /* , 0.9s linear 1 fade;*/
 }
 @keyframes spin {
 	0% {transform:rotate(360deg);}
@@ -324,12 +325,12 @@ body{
 	50% {transform:rotate(180deg);}
 	75% {transform:rotate(90deg);}
 	100% {transform:rotate(0deg);}
-}
+}/*
 @keyframes fade {
 	0% {opacity: 1;}
 	75% {opacity: 1;}
 	100% {opacity: 0;}
-}
+}*/
 /*menu thingy*/
 #contextual_menu{
 	z-index: 13;
