--- a/_includes/components/modal.njk
+++ b/_includes/components/modal.njk
@@ -1,5 +1,5 @@
 <div id="modal_window" class="modal_window">
-	<img src="{{website.url}}/includes/assets/images/load.png" id="spinner" class="spinner">
+	<img src="{{website.url}}/includes/assets/images/load.png" id="spinner" class="spinner spinning">
 	<div class="modal_image_container" id="modal_image_container">
 		<img id="modal_image" class="modal_image"  src="">
 	</div>
