final commit, corrected _data folder

--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -10,5 +10,5 @@
 </header>
 <div class="header_sub_bar">
 	<!-- href="https://www.pcagalleryart.com/" -->
-	<p>Tirage d'Art / <a style="color:#eeeeee">www.pcagalleryart.com</a></p>
+	<p>Tirage d'Art / <a style="color:#eeeeee">pcagalleryart.com</a></p>
 </div>
